--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=127.0.0.1;Initial Catalog=HR_Manage;TrustServerCertificate=True;User ID=sa;Password=Abcd@1234"
+    "Dev": "Data Source=DESKTOP-95MSJKL\\SQLEXPRESS;Initial Catalog=exam_mvs;Integrated Security=True;TrustServerCertificate= true"
   }
 
 }
