--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Dev": "Data Source=DESKTOP-95MSJKL\\SQLEXPRESS;Initial Catalog=exam_mvs;Integrated Security=True;TrustServerCertificate= true"
+    "DefaultConnection": "Data Source=DESKTOP-95MSJKL\\SQLEXPRESS;Initial Catalog=exam_mvc;Integrated Security=True;TrustServerCertificate= true"
   }
-
 }
